feat: add namespace component

--- a/kubernetes/main/apps/downloads/kustomization.yaml
+++ b/kubernetes/main/apps/downloads/kustomization.yaml
@@ -2,10 +2,8 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: downloads
 resources:
-  # Pre Flux-Kustomizations
-  - ./namespace.yaml
-  # Flux-Kustomizations
   - ./bazarr/ks.yaml
   - ./dashbrr/ks.yaml
   - ./flaresolverr/ks.yaml
@@ -21,11 +19,11 @@ resources:
   - ./sonarr/ks.yaml
 components:
   - ../../../shared/components/alerts
-transformers:
-  - |-
-    apiVersion: builtin
-    kind: NamespaceTransformer
-    metadata:
-      name: not-used
-      namespace: downloads
-    unsetOnly: true
+  - ../../../shared/components/namespace
+patches:
+  - patch: |
+      - op: add
+        path: /metadata/name
+        value: downloads
+    target:
+      kind: Namespace
