--- a/kubernetes/main/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/main/apps/self-hosted/kustomization.yaml
@@ -2,10 +2,8 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: self-hosted
 resources:
-  # Pre Flux-Kustomizations
-  - ./namespace.yaml
-  # Flux-Kustomizations
   - ./actual/ks.yaml
   - ./atuin/ks.yaml
   - ./homepage/ks.yaml
@@ -14,11 +12,11 @@ resources:
   - ./redlib/ks.yaml
 components:
   - ../../../shared/components/alerts
-transformers:
-  - |-
-    apiVersion: builtin
-    kind: NamespaceTransformer
-    metadata:
-      name: not-used
-      namespace: self-hosted
-    unsetOnly: true
+  - ../../../shared/components/namespace
+patches:
+  - patch: |
+      - op: add
+        path: /metadata/name
+        value: self-hosted
+    target:
+      kind: Namespace
