--- a/kubernetes/utility/apps/default/kustomization.yaml
+++ b/kubernetes/utility/apps/default/kustomization.yaml
@@ -2,7 +2,15 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources:
-  # Pre Flux-Kustomizations
-  - ./namespace.yaml
-  # Flux-Kustomizations
+namespace: default
+resources: []
+components:
+  - ../../../shared/components/alerts
+  - ../../../shared/components/namespace
+patches:
+  - patch: |
+      - op: add
+        path: /metadata/name
+        value: default
+    target:
+      kind: Namespace
