--- a/kubernetes/utility/apps/kube-tools/kustomization.yaml
+++ b/kubernetes/utility/apps/kube-tools/kustomization.yaml
@@ -2,10 +2,8 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: kube-tools
 resources:
-  # Pre Flux-Kustomizations
-  - ./namespace.yaml
-  # Flux-Kustomizations
   - ./fstrim/ks.yaml
   - ./node-feature-discovery/ks.yaml
   # - ./powertune/ks.yaml
@@ -13,11 +11,11 @@ resources:
   - ./system-upgrade-controller/ks.yaml
 components:
   - ../../../shared/components/alerts
-transformers:
-  - |-
-    apiVersion: builtin
-    kind: NamespaceTransformer
-    metadata:
-      name: not-used
-      namespace: kube-tools
-    unsetOnly: true
+  - ../../../shared/components/namespace
+patches:
+  - patch: |
+      - op: add
+        path: /metadata/name
+        value: kube-tools
+    target:
+      kind: Namespace
