chore: add comments to kustomize patches

--- a/kubernetes/main/apps/games/kustomization.yaml
+++ b/kubernetes/main/apps/games/kustomization.yaml
@@ -11,7 +11,8 @@ components:
   - ../../../shared/components/alerts
   - ../../../shared/components/namespace
 patches:
-  - patch: |
+  - # Add the name to the namespace
+    patch: |
       - op: add
         path: /metadata/name
         value: games
