--- a/kubernetes/utility/flux/cluster/ks.yaml
+++ b/kubernetes/utility/flux/cluster/ks.yaml
@@ -6,14 +6,21 @@ metadata:
   name: cluster-shared
   namespace: flux-system
 spec:
-  targetNamespace: flux-system
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
   interval: 30m
   path: ./kubernetes/shared
   prune: true
-  wait: true
   sourceRef:
     kind: GitRepository
     name: flux-system
+    namespace: flux-system
+  # Flux repositories under this need flux-system hardcoded as namespace for Renovate lookups
+  targetNamespace: flux-system
+  timeout: 5m
+  wait: true
 ---
 # yaml-language-server: $schema=https://kube-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
@@ -22,14 +29,21 @@ metadata:
   name: cluster-meta
   namespace: flux-system
 spec:
-  targetNamespace: flux-system
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
   interval: 30m
   path: ./kubernetes/utility/flux/meta
   prune: true
-  wait: true
   sourceRef:
     kind: GitRepository
     name: flux-system
+    namespace: flux-system
+  # Flux repositories under this need flux-system hardcoded as namespace for Renovate lookups
+  targetNamespace: flux-system
+  timeout: 5m
+  wait: true
 ---
 # yaml-language-server: $schema=https://kube-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
@@ -38,12 +52,31 @@ metadata:
   name: cluster-apps
   namespace: flux-system
 spec:
-  interval: 30m
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
   dependsOn:
     - name: cluster-meta
     - name: cluster-shared
+  interval: 30m
   path: ./kubernetes/utility/apps
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
+    namespace: flux-system
+  timeout: 5m
+  wait: false
+  patches:
+    - # Add Sops decryption to child Kustomizations
+      patch: |
+        - op: add
+          path: /spec/decryption
+          value:
+            provider: sops
+            secretRef:
+              name: sops-age
+      target:
+        group: kustomize.toolkit.fluxcd.io
+        kind: Kustomization
