--- a/kubernetes/main/apps/observability/kustomization.yaml
+++ b/kubernetes/main/apps/observability/kustomization.yaml
@@ -17,7 +17,8 @@ components:
   - ../../../shared/components/alerts
   - ../../../shared/components/namespace
 patches:
-  - patch: |
+  - # Add the name to the namespace
+    patch: |
       - op: add
         path: /metadata/name
         value: observability
