--- a/kubernetes/main/apps/storage/kustomization.yaml
+++ b/kubernetes/main/apps/storage/kustomization.yaml
@@ -12,7 +12,8 @@ components:
   - ../../../shared/components/alerts
   - ../../../shared/components/namespace
 patches:
-  - patch: |
+  - # Add the name to the namespace
+    patch: |
       - op: add
         path: /metadata/name
         value: storage
