feat: add sops-age to webhook

--- a/kubernetes/utility/apps/flux-system/kustomize-mutating-webhook/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/flux-system/kustomize-mutating-webhook/app/helmrelease.yaml
@@ -36,6 +36,8 @@ spec:
           VOLSYNC_SNAPSHOTCLASS: csi-local-hostpath
           VOLSYNC_CACHE_SNAPSHOTCLASS: local-hostpath
           VOLSYNC_STORAGECLASS: local-hostpath
-    secrets: []
+    secrets:
+      - name: sops-age
+        optional: true
     podDisruptionBudget:
       enabled: false #single node cluster
