feat: remove sops-age from child ks

--- a/kubernetes/main/apps/flux-system/kustomize-mutating-webhook/app/helmrelease.yaml
+++ b/kubernetes/main/apps/flux-system/kustomize-mutating-webhook/app/helmrelease.yaml
@@ -35,6 +35,4 @@ spec:
           VOLSYNC_SNAPSHOTCLASS: csi-ceph-blockpool
           VOLSYNC_CACHE_SNAPSHOTCLASS: ceph-block
           VOLSYNC_STORAGECLASS: ceph-block
-    secrets:
-      - name: sops-age
-        optional: true
+    secrets: []
