--- a/kubernetes/utility/apps/flux-system/kustomize-mutating-webhook/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/flux-system/kustomize-mutating-webhook/app/helmrelease.yaml
@@ -36,8 +36,6 @@ spec:
           VOLSYNC_SNAPSHOTCLASS: csi-local-hostpath
           VOLSYNC_CACHE_SNAPSHOTCLASS: local-hostpath
           VOLSYNC_STORAGECLASS: local-hostpath
-    secrets:
-      - name: sops-age
-        optional: true
+    secrets: []
     podDisruptionBudget:
       enabled: false #single node cluster
