--- a/kubernetes/main/flux/cluster/ks.yaml
+++ b/kubernetes/main/flux/cluster/ks.yaml
@@ -68,15 +68,15 @@ spec:
     namespace: flux-system
   timeout: 5m
   wait: false
-  patches:
-    - # Add Sops decryption to child Kustomizations
-      patch: |
-        - op: add
-          path: /spec/decryption
-          value:
-            provider: sops
-            secretRef:
-              name: sops-age
-      target:
-        group: kustomize.toolkit.fluxcd.io
-        kind: Kustomization
+  # patches:
+  #   - # Add Sops decryption to child Kustomizations
+  #     patch: |
+  #       - op: add
+  #         path: /spec/decryption
+  #         value:
+  #           provider: sops
+  #           secretRef:
+  #             name: sops-age
+  #     target:
+  #       group: kustomize.toolkit.fluxcd.io
+  #       kind: Kustomization
