chore: update talos configs

--- a/kubernetes/main/bootstrap/talos/talconfig.yaml
+++ b/kubernetes/main/bootstrap/talos/talconfig.yaml
@@ -151,7 +151,8 @@ patches:
   - |
     machine:
       files:
-        - op: create
+        - # Spegel
+          op: create
           path: /etc/cri/conf.d/20-customization.part
           content: |
             [plugins."io.containerd.cri.v1.images"]
