--- a/kubernetes/utility/bootstrap/talos/talconfig.yaml
+++ b/kubernetes/utility/bootstrap/talos/talconfig.yaml
@@ -34,14 +34,15 @@ nodes:
 
 patches:
   # Configure containerd
-  - |
-    machine:
-      files:
-        - op: create
-          path: /etc/cri/conf.d/20-customization.part
-          content: |
-            [plugins."io.containerd.cri.v1.images"]
-              discard_unpacked_layers = false
+  # - |
+  #   machine:
+  #     files:
+  #       - # Spegel
+  #         op: create
+  #         path: /etc/cri/conf.d/20-customization.part
+  #         content: |
+  #           [plugins."io.containerd.cri.v1.images"]
+  #             discard_unpacked_layers = false
 
   # Configure NFS Mounts
   - |
