--- a/kubernetes/main/apps/flux-system/flux-operator/instance/helm-values.yaml
+++ b/kubernetes/main/apps/flux-system/flux-operator/instance/helm-values.yaml
@@ -29,6 +29,9 @@ instance:
               provider: sops
               secretRef:
                 name: sops-age
+        target:
+          group: kustomize.toolkit.fluxcd.io
+          kind: Kustomization
       - # Increase the number of workers
         patch: |
           - op: add
