feat: shut down vrising, cause we beat it!

--- a/kubernetes/main/apps/games/kustomization.yaml
+++ b/kubernetes/main/apps/games/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   # - ./core-keeper/ks.yaml
   - ./minecraft/ks.yaml
   # - ./palworld/ks.yaml
-  - ./vrising/ks.yaml
+  # - ./vrising/ks.yaml
 components:
   - ../../../shared/components/alerts
   - ../../../shared/components/namespace
