--- a/kubernetes/main/bootstrap/apps/helmfile.yaml
+++ b/kubernetes/main/bootstrap/apps/helmfile.yaml
@@ -17,6 +17,9 @@ repositories:
   - name: jetstack
     url: https://charts.jetstack.io
 
+  - name: fluxcd-kustomize-mutating-webhook
+    url: https://xunholy.github.io/fluxcd-kustomize-mutating-webhook
+
 releases:
   - name: kube-prometheus-stack-crds
     namespace: observability
@@ -28,7 +31,7 @@ releases:
     chart: cilium/cilium
     version: 1.16.6
     values:
-      - ../apps/kube-system/cilium/app/helm-values.yaml
+      - ../../apps/kube-system/cilium/app/helm-values.yaml
     needs:
       - observability/kube-prometheus-stack-crds
 
@@ -37,7 +40,7 @@ releases:
     chart: coredns/coredns
     version: 1.37.3
     values:
-      - ../apps/kube-system/coredns/app/helm-values.yaml
+      - ../../apps/kube-system/coredns/app/helm-values.yaml
     needs:
       - kube-system/cilium
 
@@ -46,16 +49,25 @@ releases:
     chart: jetstack/cert-manager
     version: v1.16.3
     values:
-      - ../apps/cert-manager/cert-manager/app/helm-values.yaml
+      - ../../apps/cert-manager/cert-manager/app/helm-values.yaml
     needs:
       - kube-system/coredns
 
   - name: external-secrets
     namespace: external-secrets
-    chart: oci://ghcr.io/external-secrets/charts
-    version: 0.12.1
+    chart: oci://ghcr.io/external-secrets/charts/external-secrets
+    version: 0.13.0
     values:
-      - ../apps/external-secrets/external-secrets/app/helm-values.yaml
+      - ../../apps/external-secrets/external-secrets/app/helm-values.yaml
+    needs:
+      - kube-system/coredns
+
+  - name: kustomize-mutating-webhook
+    namespace: flux-system
+    chart: fluxcd-kustomize-mutating-webhook/kustomize-mutating-webhook
+    version: 0.13.0
+    values:
+      - ../../apps/flux-system/kustomize-mutating-webhook/app/helm-values.yaml
     needs:
       - kube-system/coredns
 
@@ -73,7 +85,7 @@ releases:
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
     version: 0.13.0
     values:
-      - ../apps/flux-system/flux-operator/app/helm-values.yaml
+      - ../../apps/flux-system/flux-operator/app/helm-values.yaml
     needs:
       - kube-system/wipe-rook
 
@@ -83,6 +95,6 @@ releases:
     version: 0.13.0
     wait: false
     values:
-      - ../apps/flux-system/flux-operator/instance/helm-values.yaml
+      - ../../apps/flux-system/flux-operator/instance/helm-values.yaml
     needs:
       - flux-system/flux-operator
