--- a/kubernetes/pi5/apps/flux-system/capacitor/app/helmrelease.yaml
+++ b/kubernetes/pi5/apps/flux-system/capacitor/app/helmrelease.yaml
@@ -60,7 +60,7 @@ spec:
         enabled: true
         className: internal
         hosts:
-          - host: "{{ .Release.Name }}-utility.jory.dev"
+          - host: "{{ .Release.Name }}-pi5.jory.dev"
             paths:
               - path: /
                 service:
