--- a/kubernetes/pi5/apps/flux-system/weave-gitops/app/helmrelease.yaml
+++ b/kubernetes/pi5/apps/flux-system/weave-gitops/app/helmrelease.yaml
@@ -31,7 +31,7 @@ spec:
       enabled: true
       className: internal
       hosts:
-        - host: gitops-utility.jory.dev
+        - host: gitops-pi5.jory.dev
           paths:
             - path: /
               pathType: Prefix
