--- a/kubernetes/pi5/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/pi5/apps/kube-system/cilium/app/helmrelease.yaml
@@ -58,4 +58,4 @@ spec:
         ingress:
           enabled: true
           className: internal
-          hosts: ["hubble-utility.jory.dev"]
+          hosts: ["hubble-pi5.jory.dev"]
