--- a/kubernetes/pi5/apps/network/external/cloudflared/resources/config.yaml
+++ b/kubernetes/pi5/apps/network/external/cloudflared/resources/config.yaml
@@ -1,6 +1,6 @@
 ---
 originRequest:
-  originServerName: external-utility.jory.dev
+  originServerName: external-pi5.jory.dev
 
 ingress:
   - hostname: jory.dev
