--- a/kubernetes/pi5/apps/network/external/echo-server/helmrelease.yaml
+++ b/kubernetes/pi5/apps/network/external/echo-server/helmrelease.yaml
@@ -94,7 +94,7 @@ spec:
       app:
         className: external
         hosts:
-          - host: "{{ .Release.Name }}-utility.jory.dev"
+          - host: "{{ .Release.Name }}-pi5.jory.dev"
             paths:
               - path: /
                 service:
