--- a/kubernetes/pi5/apps/network/external/ingress-nginx/helmrelease.yaml
+++ b/kubernetes/pi5/apps/network/external/ingress-nginx/helmrelease.yaml
@@ -28,7 +28,7 @@ spec:
       replicaCount: 1
       service:
         annotations:
-          external-dns.alpha.kubernetes.io/hostname: &hostname external-utility.jory.dev
+          external-dns.alpha.kubernetes.io/hostname: &hostname external-pi5.jory.dev
           lbipam.cilium.io/ips: 10.69.1.132
       ingressClassResource:
         name: external
