fix(cilium): fix cilium pi config

--- a/kubernetes/pi5/apps/kube-system/cilium/app/helm-values.yaml
+++ b/kubernetes/pi5/apps/kube-system/cilium/app/helm-values.yaml
@@ -19,7 +19,7 @@ cluster:
   name: pi5
 cni:
   exclusive: false
-devices: enp+
+devices: end+
 enableRuntimeDeviceDetection: true
 endpointRoutes:
   enabled: true
