feat: combine into a single file

--- a/docs/src/assets/bgp.conf
+++ b/docs/src/assets/bgp.conf
@@ -5,15 +5,27 @@ router bgp 64513
   neighbor k8s-main peer-group
   neighbor k8s-main remote-as 64514
 
+  neighbor k8s-utility peer-group
+  neighbor k8s-utility remote-as 64515
+
+  neighbor k8s-pi5 peer-group
+  neighbor k8s-pi5 remote-as 64516
+
   neighbor 10.69.1.21 peer-group k8s-main
   neighbor 10.69.1.22 peer-group k8s-main
   neighbor 10.69.1.23 peer-group k8s-main
   neighbor 10.69.1.24 peer-group k8s-main
   neighbor 10.69.1.25 peer-group k8s-main
   neighbor 10.69.1.26 peer-group k8s-main
+  neighbor 10.69.1.121 peer-group k8s-utility
+  neighbor 10.69.1.221 peer-group k8s-pi5
 
   address-family ipv4 unicast
     neighbor k8s-main next-hop-self
     neighbor k8s-main soft-reconfiguration inbound
+    neighbor k8s-utility next-hop-self
+    neighbor k8s-utility soft-reconfiguration inbound
+    neighbor k8s-pi5 next-hop-self
+    neighbor k8s-pi5 soft-reconfiguration inbound
   exit-address-family
 exit
