--- a/kubernetes/pi5/apps/kube-system/cilium/config/l2.yaml
+++ b/kubernetes/pi5/apps/kube-system/cilium/config/l2.yaml
@@ -7,7 +7,7 @@ metadata:
   name: policy
 spec:
   loadBalancerIPs: true
-  interfaces: ["^enp.*"]
+  interfaces: ["^end.*"]
   nodeSelector:
     matchLabels:
       kubernetes.io/os: linux
