feat: disable SUC for pi cluster

--- a/kubernetes/pi5/apps/kube-tools/kustomization.yaml
+++ b/kubernetes/pi5/apps/kube-tools/kustomization.yaml
@@ -6,7 +6,7 @@ namespace: kube-tools
 resources:
   - ./node-feature-discovery/ks.yaml
   - ./reloader/ks.yaml
-  - ./system-upgrade-controller/ks.yaml
+  # - ./system-upgrade-controller/ks.yaml
 components:
   - ../../../shared/components/alerts
   - ../../../shared/components/namespace
