--- a/kubernetes/pi5/apps/kube-tools/system-upgrade-controller/ks.yaml
+++ b/kubernetes/pi5/apps/kube-tools/system-upgrade-controller/ks.yaml
@@ -38,7 +38,7 @@ spec:
   path: ./kubernetes/pi5/apps/kube-tools/system-upgrade-controller/plans
   postBuild:
     substitute:
-      TALOS_SCHEMATIC_ID: 96f8c146a67c80daad900d3fc1a6976fe11062321eee9ab6ae2a6aea88b2d26e
+      TALOS_SCHEMATIC_ID: placeholder
       # renovate: datasource=docker depName=ghcr.io/siderolabs/installer
       TALOS_VERSION: v1.9.2
       # renovate: datasource=docker depName=ghcr.io/siderolabs/kubelet
