feat: set to custom ARM image

--- a/kubernetes/pi5/apps/storage/volsync/app/helmrelease.yaml
+++ b/kubernetes/pi5/apps/storage/volsync/app/helmrelease.yaml
@@ -26,6 +26,9 @@ spec:
     - name: snapshot-controller
       namespace: storage
   values:
+    image:
+      repository: ghcr.io/joryirving/volsync
+      tag: 0.11.0@sha256:c8bb1e824a94ab4983c0fd5a184f256c3a2ac01a074e2962002931a0a05ceaa9
     manageCRDs: true
     metrics:
       disableAuth: true
