feat: fix dnsendpoint

--- a/kubernetes/pi5/apps/network/external/cloudflared/dnsendpoint.yaml
+++ b/kubernetes/pi5/apps/network/external/cloudflared/dnsendpoint.yaml
@@ -8,4 +8,4 @@ spec:
   endpoints:
     - dnsName: "external-pi5.jory.dev"
       recordType: CNAME
-      targets: ["4e64e0e1-a45d-40c2-bb22-1d94f3bb51ba.cfargotunnel.com"]
+      targets: ["03ed8136-b897-4ec7-9928-88ec0576725.cfargotunnel.com"]
