feat: add secondary node to pi cluster

--- a/kubernetes/pi5/bootstrap/talos/talconfig.yaml
+++ b/kubernetes/pi5/bootstrap/talos/talconfig.yaml
@@ -30,7 +30,15 @@ nodes:
         mtu: 1500
         vip:
           ip: "10.69.1.220"
-
+  - hostname: "citlali"
+    ipAddress: "10.69.1.222"
+    installDisk: /dev/nvme0n1
+    controlPlane: false
+    networkInterfaces:
+      - deviceSelector:
+          hardwareAddr: 2c:cf:67:09:03:1f
+        dhcp: true
+        mtu: 1500
 patches:
   # Configure containerd
   # - |
