feat: increase cpu for kyoo-front

--- a/kubernetes/main/apps/media/kyoo/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/kyoo/app/helmrelease.yaml
@@ -123,20 +123,20 @@ spec:
       kyoo_front:
         resources:
           requests:
-            cpu: 5m
+            cpu: 20m
             memory: 50Mi
           limits:
-            cpu: 100m
+            cpu: 200m
             memory: 500Mi
 
     matcher:
       kyoo_matcher:
         resources:
           requests:
-            cpu: 5m
+            cpu: 50m
             memory: 50Mi
           limits:
-            cpu: 100m
+            cpu: 1
             memory: 500Mi
 
     scanner:
@@ -153,10 +153,10 @@ spec:
       kyoo_transcoder:
         resources:
           requests:
-            cpu: 10m
+            cpu: 100m
             memory: 500Mi
           limits:
-            cpu: 100m
+            cpu: 1
             gpu.intel.com/i915: 1
             memory: 8Gi
 
