fix(workflows): use all-namespaces in pre-pull workflow

--- a/.github/workflows/pre-pull-images.yaml
+++ b/.github/workflows/pre-pull-images.yaml
@@ -81,6 +81,7 @@ jobs:
         with:
           args: >-
             get cluster
+            --all-namespaces
             --path /github/workspace/${{ matrix.paths }}/flux
             --enable-images
             --output yaml
