feat: point pi cluster at dev branch

--- a/kubernetes/pi5/apps/flux-system/flux-operator/instance/helm-values.yaml
+++ b/kubernetes/pi5/apps/flux-system/flux-operator/instance/helm-values.yaml
@@ -14,7 +14,7 @@ instance:
     kind: GitRepository
     name: flux-system
     url: https://github.com/joryirving/home-ops.git
-    ref: refs/heads/main
+    ref: refs/heads/development
     path: kubernetes/pi5/flux/cluster
   commonMetadata:
     labels:
