feat: update workflows for branch

--- a/.github/workflows/flux-local.yaml
+++ b/.github/workflows/flux-local.yaml
@@ -4,7 +4,7 @@ name: "Flux Local"
 
 on:
   pull_request:
-    branches: ["main"]
+    branches: ["development"]
     paths:
       - kubernetes/**/apps/**
       - kubernetes/**/flux/**
