--- a/.github/workflows/helm-repository-sync.yaml
+++ b/.github/workflows/helm-repository-sync.yaml
@@ -7,7 +7,7 @@ on:
     inputs:
       clusterName:
         description: Cluster Name
-        default: main
+        default: pi5
         required: true
       helmRepoNamespace:
         description: Helm Repository Namespace
@@ -17,7 +17,7 @@ on:
         description: Helm Repository Name
         required: true
   pull_request:
-    branches: ["main"]
+    branches: ["development"]
     paths: ["kubernetes/**/helmrelease.yaml"]
 
 jobs:
