--- a/.github/workflows/kustomization-sync.yaml
+++ b/.github/workflows/kustomization-sync.yaml
@@ -5,8 +5,8 @@ name: "Flux Kustomization Sync"
 on:
   workflow_dispatch:
   push:
-    branches: ["main"]
-    paths: ["kubernetes/utility/**"]
+    branches: ["development"]
+    paths: ["kubernetes/pi5/**"]
 
 jobs:
   sync:
@@ -14,7 +14,7 @@ jobs:
     runs-on: [home-ops-runner]
     strategy:
       matrix:
-         cluster: ["utility"]
+         cluster: ["pi5"]
     steps:
       - name: Configure 1password
         uses: 1password/load-secrets-action/configure@v2
