--- a/.github/workflows/schemas.yaml
+++ b/.github/workflows/schemas.yaml
@@ -7,7 +7,7 @@ on:
   schedule:
     - cron: "0 0 * * *" # Every day at midnight
   push:
-    branches: ["main"]
+    branches: ["development"]
     paths: [".github/workflows/schemas.yaml"]
 
 env:
