--- a/.github/workflows/pre-pull-images.yaml
+++ b/.github/workflows/pre-pull-images.yaml
@@ -4,7 +4,7 @@ name: "Pre-pull Images"
 
 on:
   pull_request:
-    branches: ["main"]
+    branches: ["development"]
     paths:
       - kubernetes/**/apps/**
       - kubernetes/**/flux/**
