--- a/.github/workflows/pre-pull-images.yaml
+++ b/.github/workflows/pre-pull-images.yaml
@@ -56,11 +56,11 @@ jobs:
     needs: ["changed-clusters"]
     strategy:
       matrix:
-        branches: ["default", "pull"]
+        branches: ["development", "pull"]
         paths: ${{ fromJSON(needs.changed-clusters.outputs.matrix) }}
       fail-fast: false
     outputs:
-      default: ${{ steps.extract-images.outputs.default }}
+      development: ${{ steps.extract-images.outputs.development }}
       pull: ${{ steps.extract-images.outputs.pull }}
     steps:
       - name: Generate Token
@@ -74,7 +74,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ steps.app-token.outputs.token }}
-          ref: "${{ matrix.branches == 'default' && github.event.repository.default_branch || '' }}"
+          ref: "${{ matrix.branches == 'development' && 'development' || '' }}"
 
       - name: Gather Images
         uses: docker://ghcr.io/allenporter/flux-local:v7.0.0
@@ -106,7 +106,7 @@ jobs:
         id: compare-images
         run: |
           images=$(jq --compact-output --null-input \
-              --argjson f1 '${{ needs.extract-images.outputs.default }}' \
+              --argjson f1 '${{ needs.extract-images.outputs.development }}' \
               --argjson f2 '${{ needs.extract-images.outputs.pull }}' \
               '$f2 - $f1' \
           )
