feat: split up volsync component files

--- a/kubernetes/shared/components/volsync/kustomization.yaml
+++ b/kubernetes/shared/components/volsync/kustomization.yaml
@@ -3,7 +3,6 @@
 apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 resources:
-  - ./claim.yaml
-  # - ./minio.yaml
-  - ./nfs.yaml
-  - ./r2.yaml
+  - ./local
+  - ./remote
+  - ./pvc.yaml
