--- a/kubernetes/shared/components/volsync/pvc.yaml
+++ b/kubernetes/shared/components/volsync/pvc.yaml
@@ -14,4 +14,4 @@ spec:
   resources:
     requests:
       storage: "${VOLSYNC_CAPACITY:=2Gi}"
-  storageClassName: "${PVC_VOLSYNC_STORAGECLASS:=placeholder}"
+  storageClassName: "${PVC_VOLSYNC_STORAGECLASS}"
