--- a/kubernetes/main/apps/storage/csi-driver-nfs/app/helmrelease.yaml
+++ b/kubernetes/main/apps/storage/csi-driver-nfs/app/helmrelease.yaml
@@ -30,7 +30,7 @@ spec:
       name: nfs-slow
       parameters:
         server: voyager.internal
-        share: /mnt/user/kubernetes #placeholder
+        share: /mnt/user/kubernetes
       mountOptions:
         - nfsvers=4.2
         - nconnect=16
