feat: debug gha

--- a/.github/workflows/flux-local.yaml
+++ b/.github/workflows/flux-local.yaml
@@ -54,6 +54,7 @@ jobs:
           else
             echo "matrix=$changed" >> "$GITHUB_OUTPUT"
           fi
+          echo $changed
 
   test:
     name: Flux Local Test
